--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<canvas id="canvas1"></canvas>
+	<canvas id="canvas1" tabindex="1"></canvas>
 	<img id="overlay" src="images/overlay.png"/>
 
 	<script src="script.js"></script>
