--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 	<canvas id="canvas1" tabindex="1"></canvas>
 	<img id="overlay" src="images/overlay.png"/>
+	<img id="obstacles" src="images/obstacles.png"/>
 
 	<script src="script.js"></script>
 </body>
